Change style align and fix tag

--- a/style.css
+++ b/style.css
@@ -1,30 +1,46 @@
 body {
     font-family: sans-serif;
-    font-size: larger;
+    font-size: x-large;
+    text-align: justify;
+    line-height: 130%;
 }
 
-p {
-    font-family: serif;
-    line-height: 120%;
+nav {
+    margin: 50px;
+    font-size: xxx-large;
 }
 
-h1 {
-    text-decoration: underline;
-}
-
-figcaption {
-    font-weight: bold;
+main {
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 footer {
     margin-top: 50px;
 }
 
-.words-header {
-    text-transform: uppercase;
+section {
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-nav {
-    margin: 50px;
-    font-size: xxx-large;
+figure {
+    text-align: center;
+}
+
+figcaption {
+    font-weight: bold;
+}
+
+h1 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+p, li{
+    font-family: serif;
+}
+
+.words-header {
+    text-transform: uppercase;
 }
